--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
+        "fzaninotto/faker": "dev-master",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7"
     },
@@ -25,7 +25,11 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "app/Utilities/Dev/database_helpers.php",
+            "app/Utilities/Dev/testing_helpers.php"
+        ]
     },
     "scripts": {
         "post-root-package-install": [
